# ObjectOrientedHW2

./: CMakeLists.txt  README.txt  container.cpp  container.h  main.cpp  plane.cpp  plane.h  ship.cpp  ship.h  train.cpp  train.h  vehicle.cpp  vehicle.h
Documentation/: Описание Программы.txt  Структурная схема программы2.docx
